# giga4sql

./: .env  README.md  Refiner.ipynb  Refiner_batches.ipynb  RegexpExtractor.ipynb  SQLExtractor.ipynb  Scores.ipynb  Test_connection.ipynb  Validation.ipynb  main.py  pyproject.toml
.ipynb_checkpoints/: Refiner-checkpoint.ipynb  Refiner_batches-checkpoint.ipynb  RegexpExtractor-checkpoint.ipynb  SQLExtractor-checkpoint.ipynb
Classes/: __init__.py  helper_classes.py  model_classes.py  prompt_refiner.py  refine_classes.py  validation_classes.py
Web/: App.py
data/: logs.json  logs_batches.json  worng_sql_parsed.csv
